# emilia-protocol

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  DCO.md  DUE_DILIGENCE.md  Dockerfile  Dockerfile.consequence-control  Dockerfile.gate  EP-SPEC-v1.md  GEMINI.md  GOVERNANCE.md  README.md  RELEASE-PROCESS.md  SECURITY.md  THREAT_MODEL.md  TODO.md  concurrent-abuse-results.json  consume-results.json  docker-compose.gate-e2e.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  funding.json  glama.json  handshake-create-results.json  handshake-verify-results.json  instrumentation.js  middleware.js  middleware.ts  (+25 more)
.agents/: product-marketing-context.md
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-push  prepare-commit-msg
.obsidian/: graph.json  workspace.json
PIPs/: PIP-000-process.md  PIP-001-core-freeze.md  PIP-002-handshake.md  PIP-003-signoff.md  PIP-004-commit.md  PIP-005-eye.md  PIP-006-federation.md  PIP-007-initiator-attestation.md  PIP-008-agent-binding.md  PIP-008-authorization-receipt-rename.md  PIP-009-provenance-chain.md  PIP-010-wysiwys-execution-integrity.md  PIP-011-revocation-continuous-eval.md  PIP-012-statement-envelope-registry.md  PIP-013-human-oversight-profile.md  PIP-014-grid-curtailment-profile.md  PIP-015-crypto-agility-pqc-profile.md  PIP-016-devops-change-control-profile.md
admissibility/: registry.json
app/: HomePageClient.js  HomePageClient.tsx  css-modules.d.ts  ep.css  layout.js  layout.tsx  not-found.js  not-found.tsx  page.js  page.tsx  robots.js  robots.ts  route.js  sitemap.js  sitemap.ts
attestation/: README.md  STAGING.md  build-attestation.js  build-attestation.test.js  build-attestation.test.ts  build-attestation.ts  merkle-log.js  merkle-log.ts  reproducible-rebuild.mjs  reproducible-rebuild.mts  reproducible-rebuild.test.js  tpm-quote-verifier.js  tpm-quote-verifier.test.js  tpm-quote-verifier.test.ts  tpm-quote-verifier.ts  tpm2-tools-swtpm-quote.fixture.json  verify-cli.mjs  verify-cli.mts
bench/: README.md  cases.jsonl  run.mjs  run.mts
caid/: DESIGN.md  README.md  STATUS.md
cli/: README.md  package-lock.json  package.json
components/: CrashTestDemo.js  CrashTestDemo.tsx  EmailCapture.js  EmailCapture.tsx  EssayArticle.js  EssayArticle.tsx  EuAiActBanner.js  EuAiActBanner.tsx  HeroAnimation.js  HeroAnimation.tsx  HeroStatic.js  HeroStatic.tsx  ProofBlock.js  ProofBlock.tsx  SiteFooter.js  SiteFooter.tsx  SiteNav.js  SiteNav.tsx  TechStackAnimation.js  TechStackAnimation.tsx
conformance/: INVARIANTS.md  README.md  authority-program-profile.test.js  authority-program-profile.test.ts  conformance-manifest.json  conformance.test.js  conformance.test.ts  ep-conformance-test.js  ep-conformance-test.ts  federation.mjs  federation.mts  fixtures.json  invariants.json  invariants.test.js  invariants.test.ts  result-contract.mjs  run-model-to-matter.mjs  run-model-to-matter.mts  run-signoffs.mjs  run.mjs  run.mts  suites.mjs  suites.mts  trust-program-profile.test.js  verify_hashes.py
content/: apply.html  landing.html  operators.html  quickstart.html
cookbook/: human_approval_for_irreversible_actions.ipynb
create-ep-app/: README.md  index.js  index.ts  package.json  test.js
docs/: AAIF-PROPOSAL-v2.md  AAIF-PROPOSAL-v3.md  AAIF-Proposal-EP-v3.docx  ADD-YOUR-PROTOCOL.md  ADMISSIBILITY-INVARIANT-REGISTRY.md  AGENT-GATE.md  AGENT_SATISFACTION_GOVERNANCE.md  AML.md  APPROVAL-ENDPOINT-PROTOTYPE.md  ART14-EVIDENCE-CHECKLIST.md  ASSURANCE-LETTER-MIGRATION.md  ATTESTATION-BASELINE.md  AUDITOR-CONTROL-CATALOG.md  AUTHORITY-GOVERNANCE.md  AWS-GRANT-APPLICATION.md  AWS-Grant-Application-EP.docx  BUILD_SPEC.md  CANONICAL-DOCS.md  CANONICAL-LANGUAGE.md  CAPABILITY-MAP.md  CEO-ROLE-SPEC.md  CITATION-ANNOTATIONS.md  CODEBASE-ASSESSMENT.md  CONSEQUENCE-FIREWALL-CONFORMANCE.md  DB-ISOLATION-PLAN.md  DEPRECATIONS.md  ECONOMIC-MOAT.md  EMILIA-ASSURANCE-PRODUCT-BRIEF.md  EMILIA-EYE-ADVISORY-SPEC.md  EP-ACP-EXTENSION.md  (+112 more)
integrations/langchain-emilia/: README.md  pyproject.toml
integrations/langchain-emilia/langchain_emilia/: __init__.py  client.py  digest.py  guard.py
integrations/langchain-emilia/tests/: test_client.py  test_digest.py  test_tools.py
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/emilia_protocol/: __init__.py  client.py
sdks/python/emilia_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/python/src/emilia_protocol/: __init__.py  client.py  types.py
sdks/python/src/ep/: __init__.py  types.py
sdks/python/tests/: test_client.py
(+3664 files in other folders)
