[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emilia-protocol"
version = "1.0.0"
description = "Python SDK for the EMILIA Protocol — portable trust for machine counterparties."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]
keywords = ["trust", "ai-agents", "emilia-protocol", "machine-trust", "behavioral-receipt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://emiliaprotocol.ai"
Repository = "https://github.com/emiliaprotocol/emilia-protocol"
Documentation = "https://emiliaprotocol.ai/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/emilia_protocol"]
