[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emilia-protocol"
version = "0.9.0"
description = "Minimal Python SDK for the EMILIA Protocol — 5 core endpoints + signoff."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = []
keywords = ["trust", "ai-agents", "emilia-protocol", "handshake", "trust-gate", "signoff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://emiliaprotocol.ai"
Repository = "https://github.com/emiliaprotocol/emilia-protocol"
Documentation = "https://emiliaprotocol.ai/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/ep"]
